# k_nn_search_kd_trees

./: README.md
inputs/: input10_exponential.txt  input11_exponential.txt  input12_circle.txt  input13_circle.txt  input14_skewnormal.txt  input15_skewnormal.txt  input16_skewnormal.txt  input1_uniform.txt  input2_uniform.txt  input3_uniform.txt  input4_uniform.txt  input6_normal.txt  input7_normal.txt  input8_normal.txt  input9_exponential.txt
pres/: DPG2019pres1KubaniovaDominika.tex
src/: CMakeLists.txt  binomial_heap.h  comparators.cpp  comparators.h  data.cpp  data.h  data_generator.cpp  data_generator.h  kd_node.h  kd_tree.cpp  kd_tree.h  leaf_points.cpp  leaf_points.h  main.cpp  naive_search.cpp  naive_search.h  point.cpp  point.h  search_comparator.cpp  search_comparator.h  search_structures.cpp  search_structures.h  types.h  utils.cpp  utils.h  visualizer.cpp  visualizer.h
src/python_vis_scripts/: exp1.py  exp2.py  exp4.py
